--- a/doc/zeromq-connector.xml.sample
+++ b/doc/zeromq-connector.xml.sample
@@ -1,3 +1,3 @@
 <!-- BEGIN_INCLUDE(zeromq:outbound-endpoint) -->
-    <zeromq:outbound-endpoint address="#[map-payload:content]" exchangePattern="#[map-payload:content]"/>
+    <zeromq:outbound-endpoint address="#[map-payload:content]" exchangePattern="#[map-payload:content]" socket="#[map-payload:content]"/>
 <!-- END_INCLUDE(zeromq:outbound-endpoint) -->
