--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <properties>
         <mule.version>3.2.1</mule.version>
-        <mule.devkit.version>3.2</mule.devkit.version>
+        <mule.devkit.version>3.3-RC3</mule.devkit.version>
         <junit.version>4.9</junit.version>
         <mockito.version>1.8.2</mockito.version>
     </properties>
