--- a/src/main/resources/META-INF/services/org/mule/config/registry-bootstrap.properties
+++ b/src/main/resources/META-INF/services/org/mule/config/registry-bootstrap.properties
@@ -1,2 +1,2 @@
-SocketOperationEnumTransformer=org.mule.transport.transformers.SocketOperationEnumTransformer
-ExchangePatternEnumTransformer=org.mule.transport.transformers.ExchangePatternEnumTransformer
+SocketOperationEnumTransformer=org.mule.transport.zmq.transformers.SocketOperationEnumTransformer
+ExchangePatternEnumTransformer=org.mule.transport.zmq.transformers.ExchangePatternEnumTransformer
