--- a/pom.xml
+++ b/pom.xml
@@ -66,8 +66,8 @@
         <dependency>
             <groupId>org.zeromq</groupId>
             <artifactId>zmq</artifactId>
-            <version>2.2.0</version>
-            <systemPath>${basedir}/lib/zmq.jar</systemPath>
+            <version>3.2.2</version>
+            <systemPath>${basedir}/lib/zmq-3.2.2.jar</systemPath>
             <scope>system</scope>
         </dependency>
         <dependency>
