--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.mule.transport</groupId>
-    <artifactId>mule-transport-zeromq</artifactId>
-    <version>1.2</version>
+    <artifactId>mule-transport-zmq</artifactId>
+    <version>1.2-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>Mule ZeroMQ Transport</name>
 
