--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.mule.transport</groupId>
     <artifactId>mule-transport-zmq</artifactId>
-    <version>1.2-SNAPSHOT</version>
+    <version>2.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>Mule ZeroMQ Transport</name>
 
     <properties>
-        <mule.version>3.2.1</mule.version>
+        <mule.version>3.4.0</mule.version>
         <mule.devkit.version>3.3-RC3</mule.devkit.version>
         <junit.version>4.10</junit.version>
     </properties>
@@ -19,9 +19,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <argLine>-Djava.library.path=${jzmq.path}</argLine>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -64,10 +61,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.zeromq</groupId>
-            <artifactId>zmq</artifactId>
-            <version>2.1.0-SNAPSHOT</version>
-            <scope>compile</scope>
+            <groupId>org.jeromq</groupId>
+            <artifactId>jeromq</artifactId>
+            <version>0.2.0</version>
         </dependency>
         <dependency>
             <groupId>org.mule</groupId>
@@ -118,10 +114,10 @@
     </dependencies>
 
     <repositories>
-        <repository>
-            <id>zeromq-local-repo</id>
-            <url>file://${project.basedir}/lib</url>
-        </repository>
+        <!--<repository>-->
+            <!--<id>zeromq-local-repo</id>-->
+            <!--<url>file://${project.basedir}/lib</url>-->
+        <!--</repository>-->
         <repository>
             <id>mulesoft-releases</id>
             <name>MuleSoft Releases Repository</name>
