Upgrade to Mule 3.5.0

--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
     <name>Mule ZeroMQ Transport</name>
 
     <properties>
-        <mule.version>3.4.0</mule.version>
-        <mule.devkit.version>3.3-RC3</mule.devkit.version>
+        <mule.version>3.5.0</mule.version>
+        <mule.devkit.version>3.5.0</mule.devkit.version>
         <junit.version>4.10</junit.version>
     </properties>
 
@@ -76,10 +76,16 @@
             <artifactId>mule-module-spring-config</artifactId>
             <version>${mule.version}</version>
         </dependency>
+
         <dependency>
             <groupId>org.mule.tools.devkit</groupId>
             <artifactId>mule-devkit-annotations</artifactId>
             <version>${mule.devkit.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mule.tools.devkit</groupId>
+            <artifactId>mule-devkit-dynamic-api</artifactId>
+            <version>3.5.0</version>
         </dependency>
         <dependency>
             <groupId>org.mule.modules</groupId>
